tooling/nargo_cli/tests/snapshots/execute__tests__execution_success_simple_mut_force_brillig_true_inliner_-9223372036854775808.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: artifact
---
{
  "noir_version": "",
  "hash": "5025731186710873439",
  "abi": {
    "parameters": [
      {
        "name": "x",
        "type": {
          "kind": "field"
        },
        "visibility": "private"
      }
    ],
    "return_type": {
      "abi_type": {
        "kind": "field"
      },
      "visibility": "public"
    },
    "error_types": {
      "17843811134343075018": {
        "error_kind": "string",
        "string": "Stack too deep"
      }
    }
  },
  "bytecode": "H4sIAAAAAAAA/7VUQQ7CIBBcLI2i0YO96C/AtrZHD/oQYsM7+nQlLum6Ui+FSZot0B1mhlABHwh8PCSZ4whzN6x6GUxCLi0iOv+aiDWcsSqsK7JeJDSuIlpS8fe6uSr49ZxQf62QM2c+gTMDv14jz32c+LkXjz18Xw7as8H18H4gPR4Pwh36c+b2Pvc2c26mgvmsdphDNeMV0um48L0hokuQ86BjrjncFTmmz6zrpx9Tgfwl0w1s/5J9f8LxlugPVS7Q6TprXG2dbe0wNE97ZPxA8vQ5vQCrjYemLQYAAA==",
  "debug_symbols": "lY5LCgMhEETv0msX45AJiVcZwuCnHQRR8RMI4t2jIQvJLpuiq6kqXgWFopyHcdonYHsF6yXPxrvuaiMgorHWnMf8hmUI3T75FLgbNmUeMzC6rATQqXHdel8bi8C2pT0I0Ot/jdbdk0fDhcUvji5OTnT5FfAHNEQvUZWIA3mi7brTO1kvfbZPvwE=",
  "file_map": {
    "50": {
      "source": "// A simple program to test mutable variables\nfn main(x: Field) -> pub Field {\n    let mut y = 2;\n    y += x;\n    y\n}\n",
      "path": ""
    }
  },
  "names": [
    "main"
  ],
  "brillig_names": [
    "main"
  ]
}
