tooling/nargo_cli/tests/snapshots/execute__tests__execution_success_simple_not_force_brillig_true_inliner_-9223372036854775808.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: artifact
---
{
  "noir_version": "",
  "hash": "17391904749053694043",
  "abi": {
    "parameters": [
      {
        "name": "x",
        "type": {
          "kind": "boolean"
        },
        "visibility": "private"
      }
    ],
    "return_type": {
      "abi_type": {
        "kind": "boolean"
      },
      "visibility": "public"
    },
    "error_types": {
      "17843811134343075018": {
        "error_kind": "string",
        "string": "Stack too deep"
      }
    }
  },
  "bytecode": "H4sIAAAAAAAA/7VUWw6CMBBcoEYrURP50VuUAMKnH3qQRsI5OLoQt+lYKz+0kzTbx+5kZ9I2oQ8SHjME7Lkwe3eOah3KgFwq8fS5KMJXcOUoOaZwngUULj29hOLvVH2T9Ks5YP+VZM6Y/hjOCPxqyzyP0fK7WgiiyXNrZhzo+wFhzm4aR7LzE9TMeAKXqY/p7XQ3msjelgX99zNnHwpep55c9NH1FnNzsu9UjOG1tJ39VDLm34AWhIBzzL/weg/9myhW9Dm0uhwqPehG93390meHnxyf3vJxnPDpBQAA",
  "debug_symbols": "XYzBCoAgEET/Zc8dKrrUr0SE2iYLomIahOy/p9AhvAy8ecxkOFAmvZM93QXLmsE4JSI5WyhzBzKQMaT3pr5FICENfngmq342Ph6bvQ9O4ZEC1qfqoK8xlFyHuRunjZk3fgE=",
  "file_map": {},
  "names": [
    "main"
  ],
  "brillig_names": [
    "main"
  ]
}
